[package]
name = "hashcash"
version = "0.1.0"
authors = ["Cristian Dean <cristiandeanabreu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
sha1 = "0.6.0"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

